src/github.com/ebay/beam/query/parser/testdata/legacy/errors/5_terms.bql
?id ?s rdfs:label ?l ?unknown
